Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI1553.H

typedef void VOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef struct
{
    USHORT msgflag;             //Driver writes message flags
    USHORT msgopt;              //Driver writes message options
    USHORT msgerr;              //Card writes message errors
    USHORT msgact;              //Card writes message activity
    USHORT resptime1;           //Card writes response time 1
    USHORT resptime2;           //Card writes response time 2
    USHORT datacount;           //Card writes data count
    USHORT extflag;             //Driver writes external flags
    union {
        ULONG  timetag;         //Card writes time tag
        ULONG  hitcount;        //Card writes hit count
    };
    union {
        ULONG  elapsetime;      //Card writes elapsed time
        ULONG  mintime;         //Card writes min time
        ULONG  maxtime;         //Card writes max time
    };
    ULONG  preaddr;             //Driver writes pre-proc address
    ULONG  postaddr;            //Driver writes post-proc address
    ULONG  timetagh;            //Card writes extended timetag
    USHORT resv18;              //Reserved field
    USHORT resv19;              //Reserved field
    USHORT cwd1;                //Card/User writes command word 1 (R/T)
    USHORT cwd2;                //Card/User writes command word 2 (R/T)
    USHORT swd1;                //Card writes status word 1
    USHORT swd2;                //Card writes status word 2
    USHORT data[32];            //User/Card writes data words (R/T)
    USHORT extra[8];            //User/Card writes extra words (R/T)
} MSGFIELDS1553;
typedef MSGFIELDS1553 * LPMSGFIELDS1553;
BTI1553API LISTADDR __stdcall BTI1553_ListConfigEx(ULONG configval,INT count,USHORT skipval,HCORE handleval);
BTI1553API INT __stdcall BTI1553_ListDataRdEx(LPUSHORT buf,INT count,INT index,LISTADDR listaddr,HCORE handleval);
BTI1553API INT __stdcall BTI1553_ListDataWrEx(LPUSHORT buf,INT count,INT index,LISTADDR listaddr,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_ListInit(LISTADDR listaddr,MSGADDR msgaddr,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_ListNextRd(ULONG listaddr,LPUSHORT header,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_ListNextWr(ULONG listaddr,LPUSHORT header,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_ListPostRd(LISTADDR listaddr,LPUSHORT header,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_ListPostWr(LISTADDR listaddr,LPUSHORT header,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_ListPreRd(LISTADDR listaddr,LPUSHORT header,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_ListPreWr(LISTADDR listaddr,LPUSHORT header,HCORE handleval);
BTI1553API INT __stdcall BTI1553_ListStatus(LISTADDR listaddr,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_ModeIsBC(USHORT chanflag);
BTI1553API BOOL __stdcall BTI1553_ModeIsMon(USHORT chanflag);
BTI1553API BOOL __stdcall BTI1553_ModeIsNotBC(USHORT chanflag);
BTI1553API BOOL __stdcall BTI1553_ModeIsNotMon(USHORT chanflag);
BTI1553API BOOL __stdcall BTI1553_ModeIsNotPlay(USHORT chanflag);
BTI1553API BOOL __stdcall BTI1553_ModeIsNotRT(USHORT chanflag);
BTI1553API BOOL __stdcall BTI1553_ModeIsNotSerial(USHORT chanflag);
BTI1553API BOOL __stdcall BTI1553_ModeIsPlay(USHORT chanflag);
BTI1553API BOOL __stdcall BTI1553_ModeIsRT(USHORT chanflag);
BTI1553API BOOL __stdcall BTI1553_ModeIsSerial(USHORT chanflag);
BTI1553API ERRVAL __stdcall BTI1553_MonConfigEx(ULONG configval,ULONG moncount,USHORT cardnum,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_MonFilterSAEx(INT taval,ULONG rcvsamask,ULONG xmtsamask,ULONG rcvmcmask,ULONG xmtmcmask,INT channum,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_MsgCheck(MSGADDR msgaddr,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_MsgCommRd(LPMSGFIELDS1553 buf,MSGADDR msgaddr,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_MsgCommWr(LPMSGFIELDS1553 buf,MSGADDR msgaddr,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_MsgConfig(ULONG configval,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_MsgConfigEx(ULONG configval,USHORT cwd,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_MsgCWD1Rd(MSGADDR msgaddr,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_MsgCWD1Wr(USHORT cwd1,MSGADDR msgaddr,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_MsgCWD2Rd(MSGADDR msgaddr,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_MsgCWD2Wr(USHORT cwd2,MSGADDR msgaddr,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_MsgErrorRd(MSGADDR msgaddr,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_MsgErrorWr(USHORT value,MSGADDR msgaddr,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_MsgFlagRd(MSGADDR msgaddr,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_MsgFlagWr(USHORT msgflag,MSGADDR msgaddr,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_MsgIsAccessed(MSGADDR msgaddr,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_MsgOptRd(MSGADDR msgaddr,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_MsgOptWr(USHORT msgopt,MSGADDR msgaddr,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_MsgReset(MSGADDR msgaddr,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_MsgResetEx(MSGADDR msgaddr,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_MsgSWD1Rd(MSGADDR msgaddr,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_MsgSWD2Rd(MSGADDR msgaddr,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_PlayClear(INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_PlayConfigEx(ULONG configval,ULONG playcount,ULONG tamask,INT channum,HCORE handleval);
BTI1553API ULONG __stdcall BTI1553_PlayCounterWr(ULONG totalcount,INT channum,HCORE handleval);
BTI1553API INT __stdcall BTI1553_PlayStatusEx(LPULONG totalcount,INT channum,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_PlayWrEx(LPUSHORT buf,USHORT bufcount,INT channum,HCORE handleval);