Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI1553NET.CS

            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ListConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_ListConfigEx(UInt32 configval, Int32 count, UInt16 skipval, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ListDataRdEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ListDataRdEx(UInt16[] buf, Int32 count, Int32 index, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ListDataWrEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ListDataWrEx(UInt16[] buf, Int32 count, Int32 index, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ListInit@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ListInit(UInt32 listaddr, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ListNextRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_ListNextRd(UInt32 listaddr, ref UInt16 header, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ListNextWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_ListNextWr(UInt32 listaddr, ref UInt16 header, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ListPostRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_ListPostRd(UInt32 listaddr, ref UInt16 header, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ListPostWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_ListPostWr(UInt32 listaddr, ref UInt16 header, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ListPreRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_ListPreRd(UInt32 listaddr, ref UInt16 header, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ListPreWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_ListPreWr(UInt32 listaddr, ref UInt16 header, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ListStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ListStatus(UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ModeIsBC@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ModeIsBC(UInt16 chanflag);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ModeIsMon@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ModeIsMon(UInt16 chanflag);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ModeIsNotBC@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ModeIsNotBC(UInt16 chanflag);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ModeIsNotMon@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ModeIsNotMon(UInt16 chanflag);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ModeIsNotPlay@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ModeIsNotPlay(UInt16 chanflag);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ModeIsNotRT@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ModeIsNotRT(UInt16 chanflag);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ModeIsNotSerial@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ModeIsNotSerial(UInt16 chanflag);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ModeIsPlay@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ModeIsPlay(UInt16 chanflag);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ModeIsRT@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ModeIsRT(UInt16 chanflag);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ModeIsSerial@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ModeIsSerial(UInt16 chanflag);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MonConfigEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_MonConfigEx(UInt32 configval, UInt32 moncount, UInt16 cardnum, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MonFilterSAEx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_MonFilterSAEx(Int32 taval, UInt32 rcvsamask, UInt32 xmtsamask, UInt32 rcvmcmask, UInt32 xmtmcmask, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgCheck@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_MsgCheck(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgCommRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_MsgCommRd(ref MSGFIELDS1553 buf, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgCommWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_MsgCommWr(ref MSGFIELDS1553 buf, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_MsgConfig(UInt32 configval, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgConfigEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_MsgConfigEx(UInt32 configval, UInt16 cwd, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgCWD1Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_MsgCWD1Rd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgCWD1Wr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_MsgCWD1Wr(UInt16 cwd1, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgCWD2Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_MsgCWD2Rd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgCWD2Wr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_MsgCWD2Wr(UInt16 cwd2, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgErrorRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_MsgErrorRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgErrorWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_MsgErrorWr(UInt16 value, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgFlagRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_MsgFlagRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgFlagWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_MsgFlagWr(UInt16 msgflag, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgIsAccessed@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_MsgIsAccessed(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgOptRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_MsgOptRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgOptWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_MsgOptWr(UInt16 msgopt, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgReset@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_MsgReset(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgResetEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_MsgResetEx(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgSWD1Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_MsgSWD1Rd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_MsgSWD2Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_MsgSWD2Rd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_PlayClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_PlayClear(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_PlayConfigEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_PlayConfigEx(UInt32 configval, UInt32 playcount, UInt32 tamask, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_PlayCounterWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_PlayCounterWr(UInt32 totalcount, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_PlayStatusEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_PlayStatusEx(ref UInt32 totalcount, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_PlayWrEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_PlayWrEx(UInt16[] buf, UInt16 bufcount, Int32 channum, IntPtr handleval);
